			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02p: *********************************

BUG: (06/20/05, RK) NCC hierarchical with size checking fails to compare top level cells (Bug #384)

IMP: (06/20/05, RK) NCC confuses the user for an unusual situation (Bug #385)

IMP: (06/19/05, DN) Warning in ElectricObject.findKey about possible change to CaseSensitive
    search in future versions.

IMP: (06/18/05, GVG) Refactoring describe() functions and using toString() in more places.

BUG: (06/18/05, GVG) Exception in parasitic tool for AND gate if network is null in port (Bug#377)
FIX: Skipping the layer if is diffusion.

BUG: (06/18/05, DN) JELIB reader doesn't connect mismatched arc to dummy pin.
FIX: In io.input.JELIB.figureOutPortInst assign dummy node to "portNI".

BUG: (06/18/05, DN) DebugMenus|JonG|DescribeProtoVars causes exception on PrimitiveNodes.
FIX: Add "if (ni.getProto() instanceof Cell)".

IMP: (06/17/05, GVG) Ability to select "scalable" transistors again.

IMP/MAN: (06/17/05, GVG) 3D View back under WindowMenu.

IMP/MAN: (06/17/05, GVG) Methods to extract DRC rules for preferences tab.

BUG: (06/17/05, SMR) Status bar clips bottom of component menu (Bug #381).
FIX: In StatusBar constructor, set "fieldHierCoords" to be a non-null string.

IMP: (06/17/05, SMR) Removed "Show Special Transistors" from "mocmos" part of "Technology" preferences.

IMP: (06/17/05, SMR) "Align to Grid" now moves pins and grid-aligns arcs better (Bug #360).

IMP: (06/17/05, SMR) Manual being updated (Bug #379).

IMP: (06/17/05, SMR) Preferences dialog now has "Help" button to take you to proper manual page (Bug #378).

IMP: (06/16/05, SMR) Fixed the color/pattern panel of the "Artwork Appearance" command
     and "Layers" Preferences to automatically set Displayed "Use Stipple Pattern".

IMP: (06/16/05, SMR) Refactored the Assura DRC error reader to be in the DRC tool.
