@@ -100,15 +100,6 @@ public class LogicalEffortTab extends PreferencePanel
 		leArcList.setSelectedIndex(0);
 		leArcListClick(null);
 		leWireRatio.getDocument().addDocumentListener(new ArcDocumentListener(leArcOptions, leArcList, leArcListModel, curTech));
-		leHelp.addActionListener(new ActionListener()
-		{
-			public void actionPerformed(ActionEvent evt) { leHelpActionPerformed(evt); }
-		});
-	}
-
-	private void leHelpActionPerformed(ActionEvent evt)
-	{
-		System.out.println("No help yet");
 	}
 
 	/**
@@ -232,8 +223,7 @@ public class LogicalEffortTab extends PreferencePanel
 	 * WARNING: Do NOT modify this code. The content of this method is
 	 * always regenerated by the Form Editor.
 	 */
-    private void initComponents()//GEN-BEGIN:initComponents
-    {
+    private void initComponents() {//GEN-BEGIN:initComponents
         java.awt.GridBagConstraints gridBagConstraints;
 
         logicalEffort = new javax.swing.JPanel();
@@ -242,7 +232,6 @@ public class LogicalEffortTab extends PreferencePanel
         leDisplayIntermediateCaps = new javax.swing.JCheckBox();
         jLabel5 = new javax.swing.JLabel();
         jLabel14 = new javax.swing.JLabel();
-        leHelp = new javax.swing.JButton();
         jLabel15 = new javax.swing.JLabel();
         jLabel20 = new javax.swing.JLabel();
         jLabel22 = new javax.swing.JLabel();
@@ -264,10 +253,8 @@ public class LogicalEffortTab extends PreferencePanel
 
         setTitle("Tool Options");
         setName("");
-        addWindowListener(new java.awt.event.WindowAdapter()
-        {
-            public void windowClosing(java.awt.event.WindowEvent evt)
-            {
+        addWindowListener(new java.awt.event.WindowAdapter() {
+            public void windowClosing(java.awt.event.WindowEvent evt) {
                 closeDialog(evt);
             }
         });
@@ -322,13 +309,6 @@ public class LogicalEffortTab extends PreferencePanel
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
         logicalEffort.add(jLabel14, gridBagConstraints);
-
-        leHelp.setText("Help");
-        gridBagConstraints = new java.awt.GridBagConstraints();
-        gridBagConstraints.gridx = 2;
-        gridBagConstraints.gridy = 11;
-        gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
-        logicalEffort.add(leHelp, gridBagConstraints);
 
         jLabel15.setText("Maximum number of iterations:");
         gridBagConstraints = new java.awt.GridBagConstraints();
@@ -490,7 +470,6 @@ public class LogicalEffortTab extends PreferencePanel
     private javax.swing.JCheckBox leDisplayIntermediateCaps;
     private javax.swing.JTextField leGateCapacitance;
     private javax.swing.JTextField leGlobalFanOut;
-    private javax.swing.JButton leHelp;
     private javax.swing.JCheckBox leHighlightComponents;
     private javax.swing.JTextField leKeeperSizeRatio;
     private javax.swing.JTextField leMaxIterations;
