@@ -249,7 +249,7 @@
             </Component>
             <Component class="javax.swing.JCheckBox" name="delayedX">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Use Delayed X Propogation"/>
+                <Property name="text" type="java.lang.String" value="Use Delayed X Propagation"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
